Updated Week-1. Almost there with twitter and blog analyzis.

--- a/Week1/week1.Rmd
+++ b/Week1/week1.Rmd
@@ -40,6 +40,10 @@ library(magrittr)
 library(tm)
 library(skmeans)
 library(syuzhet) # Sentiment analyzis
+library(proxy) # Hierachal clustering
+library(igraph) # Fancy graphing
+library(topicmodels)
+
 # install.packages("tm.lexicon.GeneralInquirer", repos="http://datacube.wu.ac.at", type="source")
 library(tm.lexicon.GeneralInquirer)
 # install.packages("tm.plugin.sentiment", repos="http://R-Forge.R-project.org")
@@ -252,7 +256,83 @@ ggplot(b.td_new, aes(x = reorder(sentiment, -count), y = count)) +
 The mood of the blogs looks like it's filled of trust, anticipation and joy.
 
 ### Try clustering the data
-I will try clustering the data
+I will try clustering the data based on the "oil" term
+```{r}
+b.tdm.love <- TermDocumentMatrix(b.docs, list(dictionary = c("oil")))
+#Remove the rows that does not contain the word love
+col_freqr <- col_sums(b.tdm.love)
+b.tdm.love.only <- b.tdm[, col_freqr>0]
+dim(b.tdm.love.only)
+
+# Reduce the matrix to only contain the most used words in the blogs
+b.tdm.love.only <- b.tdm.love.only[findFreqTerms(b.tdm.love.only, 300), ]
+dim(b.tdm.love.only)
+
+memory.limit(size=60000) # Just chack I have enough memory.
+m <- as.matrix(b.tdm.love.only)
+d <- dist(m, method="cosine")
+#run hierarchical clustering using Ward’s method
+hc <- hclust(d, method="ward.D")
+plot(hc, hang=-1)
+rect.hclust(hc, k=5)
+```
+Funny. I tought there were more on the oil as in oil-well.. Not as a oil in kitchen-food-making.
+
+### Topic modeling
+```{r}
+set.seed(123)
+b.dtm.x <- DocumentTermMatrix(b.docs, control=list(wordLengths=c(3, 15), bounds = list(global = c(1000,10000))))
+dim(b.dtm.x)
+# Remove zero rows.
+freqr.x <- row_sums(b.dtm.x)
+b.dtm.x <- b.dtm.x[freqr.x >0,]
+dim(b.dtm.x)
+
+#b.dtm.x <- removeSparseTerms(b.dtm.x, 0.99)
+myLda <- LDA(b.dtm.x, k=8)
+
+terms(myLda, 10)
+```
+It is hard to see the difference between the topics. They somewhat fall into same categories.
+
+### Social network analyzis
+Reference: https://rdatamining.wordpress.com/2012/05/17/an-example-of-social-network-analysis-with-r-using-package-igraph/
+```{r}
+### Load Data
+
+# inspect part of the matrix
+b.tdm[5:10,1:20]
+
+# Transform Data into an Adjacency Matrix
+
+# change it to a Boolean matrix
+b.tdm[b.tdm>=1] <- 1
+# transform into a term-term adjacency matrix
+b.termMatrix <- b.tdm %*% t(b.tdm)
+# inspect terms numbered 5 to 10
+b.termMatrix[5:10,5:10]
+
+### Build a Graph
+
+# Now we have built a term-term adjacency matrix, where the rows and columns represents terms, and every entry is the number of co-occurrences of two terms. Next we can build a graph with graph.adjacency() from package igraph.
+
+# build a graph from the above matrix
+g <- graph.adjacency(b.termMatrix, weighted=T, mode = "undirected")
+# remove loops
+g <- simplify(g)
+# set labels and degrees of vertices
+V(g)$label <- V(g)$name
+V(g)$degree <- degree(g)
+
+### Plot a Graph
+
+# set seed to make the layout reproducible
+set.seed(3952)
+layout1 <- layout.fruchterman.reingold(g)
+plot(g, layout=layout1)
+```
+
+
 
 ## Explore Twitter data
 ```{r}
@@ -262,6 +342,7 @@ numWords <- sapply(gregexpr("[[:alpha:]]+", twitter, perl=TRUE), function(x) sum
 # Distribution of the numer of words in the tweets:
 summary(numWords)
 hist(numWords)
+# Looks like the majority of the number of words are around 7-19 words (between 1st and 3rd quantile)
 
 # Find the number of characters
 numChar <- sapply(twitter, nchar)
@@ -271,6 +352,109 @@ hist(numChar)
 
 
 ```
+
+### Cleaning the data
+```{r}
+t.docs <- Corpus(VectorSource(twitter))
+
+tmFuncs <- list(stemDocument,removeNumbers,
+                 removePunctuation, skipWords, stripWhitespace,
+                 trimws)
+
+# Clean and reduce to important words:
+t.docs <- tm_map(t.docs, FUN = tm_reduce, tmFuns = tmFuncs)
+```
+
+### Find the high frequencies of the words
+```{r}
+# Create av Document term matrix
+t.dtm <- DocumentTermMatrix(t.docs)
+
+# Find and plot the most used terms in the three sections of blogs
+t.freq <- sort(col_sums(t.dtm), decreasing=TRUE)   
+wf <- data.frame(word=names(head(t.freq, 15)), freq=head(t.freq, 15))
+
+# Plot
+ggplot(wf, aes(x = reorder(word, -freq), y = freq)) + 
+      geom_bar(stat = "identity") +
+      xlab("Terms (Word)") + 
+      ylab("Frequency")
+```
+
+### Make a word cloud of the 50 most used terms
+```{r}
+wordcloud(names(head(t.freq, 50)), head(t.freq, 50), colors=brewer.pal(6, "Dark2"))
+```
+The twitter cloud looks almost like the blog cloud...
+
+### Sentiment alayzis of the twitter messages
+Lets 1st find out the number and distribution of positive and negative tweets.
+```{r}
+t.tdm <- TermDocumentMatrix(t.docs)
+# Score the twitter in positive or negative
+pos.score <- tm_term_score(t.tdm, terms_in_General_Inquirer_categories("Positiv")) # this lists each document with number below
+
+neg.score <- tm_term_score(t.tdm, terms_in_General_Inquirer_categories("Negativ")) 
+
+df.scores <- data.frame(positive = pos.score, negative = neg.score)
+df.scores <- transform(df.scores, net = positive - negative)
+# Find the spread of the scores
+summary(df.scores$net)
+
+# Look at the histogram of the pos/neg tweets
+hist(df.scores$net, breaks = 100)
+
+# Find three most positive and three most negative tweets
+ord <- df.scores[ order(-df.scores[,3]), ]
+most.positive <- as.numeric(rownames(head(ord,3)))
+most.negative <- as.numeric(rownames(tail(ord,3)))
+
+# Investigate what they are about:
+# The negative:
+twitter[most.negative]
+
+# The positive:
+twitter[most.positive]
+
+# Alot of repeated pos/neg words. This is the outliers. 
+# Mark: Must remove the extreeme outliers in some ways.
+
+# Count the positive, negative and neutral tweets
+sum(  df.scores$net < 0  ) # number of negative tweets
+sum(  df.scores$net > 0  ) # number of positive tweets
+sum(  df.scores$net == 0  ) # Number of neutrals tweets
+
+# It is clear that there are more neutral tweets.
+```
+And 2nd find out the mood of the tweets:
+```{r}
+t.sentiment <- get_nrc_sentiment(twitter)
+t.df.sentiment <-data.frame(t(t.sentiment))
+
+t.td_new <- data.frame(rowSums(t.df.sentiment))
+#The function rowSums computes column sums across rows for each level of a grouping variable.
+ 
+#Transformation and  cleaning
+names(t.td_new)[1] <- "count"
+t.td_new <- cbind("sentiment" = rownames(t.td_new), t.td_new)
+rownames(t.td_new) <- NULL
+t.td_new<-t.td_new[1:8,]
+
+#Visualisation
+ggplot(t.td_new, aes(x = reorder(sentiment, -count), y = count)) + 
+      geom_bar(stat = "identity", aes(fill=sentiment)) +
+      xlab("Terms (Word)") + 
+      ylab("Frequency")
+```
+The mood of the tweets looks like it's filled of trust, anticipation and joy. This is somewhat the same tendency as with the blogs.
+
+
+
+### Find out what the twitter messages is about
+```{r}
+
+```
+
 
 ## Extra exploration of the twitter data for the Quiz week 1
 ```{r}
@@ -304,257 +488,4 @@ plot(numChar)
 
 
 ```
-
-
-## Cluster
-```{r, cache=FALSE,message=FALSE}
-####################
-#####3
-####### Cluster
-#######
-#################
-
-# This sparse percentage denotes the proportion of empty elements. A sparse parameter of 0.7 means that we select from those terms which are less than 70% empty. We set the sparsity at 0.95 so that terms with at least that sparse percentage will be removed. So the terms we accept can be very empty- at most 95% empty. Then we can coerce the TD matrix into a regular matrix.
-tdm <- TermDocumentMatrix(docs, control=list(wordLengths=c(3, 15), bounds = list(global = c(1000,10000))))
-
-tdms <- removeSparseTerms(tdm, 0.99)
-dim(tdms)
-# Delete rows that are zero:
-col_freqr <-  col_sums(tdms)
-tdms <- tdms[,row_freqr>0]
-dim(tdms)
-
-set.seed(1000)
-sam <- sample(seq(1, 12056), 12000)
-tdms <- tdms[,sam]
-
-memory.limit(size=60000)
-m <- as.matrix(tdms)
-
-memory.limit(size=60000)
-#rownames(m) <- 1:nrow(m)
-
-## hierarchical clustering
-library(proxy)
-#compute distance between document vectors
-d <- dist(m, method="cosine")
-
-hc <- hclust(d, method="average")
-
-plot(hc, hang=-1)
-
-cl <- cutree(hc, 15)
-
-table(cl)
-
-findFreqTerms(tdms[cl==1], 5)
-
-
-#run hierarchical clustering using Ward’s method
-groups <- hclust(d,method="ward.D")
-#plot dendogram, use hang to ensure that labels fall below tree
-plot(groups, hang=-1)
-
-rect.hclust(groups, k=5)
-
-
-
-
-# dtm <- DocumentTermMatrix(docs, control=list(wordLengths=c(4, 15)))
-
-# Here we have told R to include only those words that occur in  500 to 2000 documents. We have also enforced  lower and upper limit to length of the words included (between 4 and 20 characters).
-
-
-# Inspect dtm
-dtm
-
-freqr <-  col_sums(dtm)
-length(freqr)
-#create sort order (asc)
-ordr <- order(freqr,decreasing=TRUE)
-#inspect most frequently occurring terms
-freqr[head(ordr)]
-# The output:
-#    one   will   like    can   time   just 
-# 136263 116009 111796 109971 108426 100612 
-# Dous not tell much, lets see what the least output is:
-#inspect least frequently occurring terms
-freqr[tail(ordr)]
-
-# keep only  words that occur >1000 times in all docs
-#dtm2 <- dtm[,which( freqr > 30000)]
-#dtm2
-#freqr <-  col_sums(dtm2)
-
-# Delete rows that are zero:
-row_freqr <-  row_sums(dtm)
-dtm <- dtm[row_freqr>0,]
-
-# I will investigate the words freedom and sea a little bit further. To see the associations
-# We can also find associations with a word, specifying a correlation limit
-
-assosiations <- findAssocs(dtm, c("film","game"), corlimit=0.2)
-
-
-d <- data.frame(word = colnames(dtm),freq=freqr)
-dd <- head(d[order(d$freq,decreasing=TRUE),], 20)
-
-barplot(d[1:10,]$freq, las = 2, names.arg = d[1:10,]$word, col ="lightblue", main ="Most frequent words", ylab = "Word frequencies")
-
-
-##########################################
-#############
-#############    Clustering
-#############
-##########################################
-## do tfxidf
-dtm_tfxidf <- weightTfIdf(dtm)
-inspect(dtm_tfxidf[1:10, 5001:5010])
-
-## do document clustering
-
-### k-means (this uses euclidean distance)
-m <- as.matrix(dtm_tfxidf)
-rownames(m) <- 1:nrow(m)
-
-### don't forget to normalize the vectors so Euclidean makes sense
-norm_eucl <- function(m) m/apply(m, MARGIN=1, FUN=function(x) sum(x^2)^.5)
-m_norm <- norm_eucl(m)
-
-
-### Remove NA's
-m_norm[is.na(m_norm)] <- 0
-
-### cluster into 10 clusters
-cl <- kmeans(m_norm, 10)
-cl
-
-table(cl$cluster)
-
-### show clusters using the first 2 principal components
-plot(prcomp(m_norm)$x, col=cl$cl)
-
-findFreqTerms(dtm_tfxidf[cl$cluster==1], 50)
-inspect(reuters[which(cl$cluster==1)])
-
-
-### this is going to take 4-ever (O(n^2))
-memory.limit(size=40000)
-d <- dist(m, method="cosine")
-hc <- hclust(d, method="average")
-plot(hc, hang=-1)
-
-cl <- cutree(hc, 5)
-table(cl)
-
-findFreqTerms(dtm[cl==1], 50)
-
-
-
-
-###################################
-# Quantitive analyzis of text
-words <- dtms %>% as.matrix %>% colnames %>% (function(x) x[nchar(x) < 20])
-
-length(words)
-
-head(words, 15)
-
-summary(nchar(words))
-
-table(nchar(words))
-
-dist_tab(nchar(words))
-
-
-
-
-
-
-###################################
-
-freq <- rollup(tdm, 2, na.rm=TRUE, FUN = sum)
-class(freq)
-
-# Explore the document term matrix
-sumfreq <- rowSums(as.matrix(freq))
-length(sumfreq)
-
-
-
-
-
-
-
-# Clustering
-
-# clus: a skmeans object
-# dtm: a Document Term Matrix
-# first: eg. 10 most frequent words per cluster
-# unique: if FALSE all words of the DTM will be used
-#         if TRUE only cluster specific words will be used 
-
-
-
-# result: List with words and frequency of words 
-#         If unique = TRUE, only cluster specific words will be considered.
-#         Words which occur in more than one cluster will be ignored.
-
-
-
-mfrq_words_per_cluster <- function(clus, dtm, first = 10, unique = TRUE){
-  if(!any(class(clus) == "skmeans")) return("clus must be an skmeans object")
-
-  dtm <- as.simple_triplet_matrix(dtm)
-  indM <- table(names(clus$cluster), clus$cluster) == 1 # generate bool matrix
-
-  hfun <- function(ind, dtm){ # help function, summing up words
-    if(is.null(dtm[ind, ]))  dtm[ind, ] else  col_sums(dtm[ind, ])
-  }
-  frqM <- apply(indM, 2, hfun, dtm = dtm)
-
-  if(unique){
-    # eliminate word which occur in several clusters
-    frqM <- frqM[rowSums(frqM > 0) == 1, ] 
-  }
-  # export to list, order and take first x elements 
-  res <- lapply(1:ncol(frqM), function(i, mat, first)
-                head(sort(mat[, i], decreasing = TRUE), first),
-                mat = frqM, first = first)
-
-  names(res) <- paste0("CLUSTER_", 1:ncol(frqM))
-  return(res)
-}
-
-# dtm3 has no rows with zero.
-
-LDA(dtm, 30)
-
-rownames(dtm3) <- paste0("Doc_", 1:dim(dtm3)[1])
-clus <- skmeans(dtm3, 3)
-# weightBin(x)
-# Download CLUTO at:
-# http://glaros.dtc.umn.edu/gkhome/cluto/cluto/download
-
-file.create("cluto.file.test")
-con <- file("cluto.file.test", open = "rw") 
-writeCM(dtm3, con)
-readCM(con, clabel = NULL)
-
-close(con)
-
-cluto <- doc2mat(dtm3)
-
-clus <- skmeans(dtm3, method = "CLUTO", k = 4, control = list(nruns = 20))
-
-mfrq_words_per_cluster(clus, dtm3)
-mfrq_words_per_cluster(clus, dtm3, unique = FALSE)
-
-
-```
-
-```{r}
-
-```
-
 
